--- a/events.html
+++ b/events.html
@@ -1,100 +1,13 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Events | Family Fun Finder</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <a class="skip-link" href="#main">Skip to content</a>
-    <header class="site-header">
-      <div class="container header-content">
-        <div class="brand">
-          <div class="brand-mark">FF</div>
-          <div>
-            <div class="brand-title">Family Fun Finder</div>
-            <div class="brand-subtitle">Events calendar</div>
-          </div>
-        </div>
-        <nav class="nav-links" aria-label="Primary">
-          <a href="index.html">Home</a>
-          <a class="active" href="events.html">Events</a>
-          <a href="submit.html">Submit</a>
-          <a href="about.html">About</a>
-        </nav>
-      </div>
-    </header>
-
-    <main id="main" class="section">
-      <div class="container">
-        <div class="section-header">
-          <h1>All upcoming events</h1>
-          <p>Filter by region, category, age range, or date. Save favorites locally.</p>
-        </div>
-
-        <div class="filters">
-          <label>
-            Region
-            <select id="filter-region">
-              <option value="all">All</option>
-              <option value="St. Augustine">St. Augustine</option>
-              <option value="Jacksonville">Jacksonville</option>
-            </select>
-          </label>
-          <label>
-            Category
-            <select id="filter-category">
-              <option value="all">All</option>
-              <option value="Outdoor">Outdoor</option>
-              <option value="Storytime">Storytime</option>
-              <option value="Learning">Learning</option>
-              <option value="Active">Active</option>
-              <option value="Food & Fun">Food & Fun</option>
-            </select>
-          </label>
-          <label>
-            Age range
-            <select id="filter-age">
-              <option value="all">All ages</option>
-              <option value="0-3">0-3</option>
-              <option value="4-7">4-7</option>
-              <option value="8-12">8-12</option>
-              <option value="13+">13+</option>
-            </select>
-          </label>
-          <label>
-            Start date
-            <input id="filter-date" type="date" />
-          </label>
-          <label>
-            Search
-            <input id="filter-search" type="search" placeholder="Try: festival, library" />
-          </label>
-        </div>
-
-        <div class="notice">
-          Events are curated weekly and reviewed before publishing. We rewrite descriptions to keep
-          them clear, neutral, and parent-friendly.
-        </div>
-
-        <div class="events-grid" id="events-grid"></div>
-      </div>
-    </main>
-
-    <footer class="site-footer">
-      <div class="container footer-grid">
-        <div>
-          <div class="brand-title">Family Fun Finder</div>
-          <div class="brand-subtitle">St. Augustine + Jacksonville</div>
-        </div>
-        <div>
-          <p>Have an event to share?</p>
-          <a href="submit.html">Submit it here →</a>
-        </div>
-      </div>
-    </footer>
-
-    <script type="module" src="scripts/app.js"></script>
-  </body>
-</html>
+<html lang="en"><head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="0" />
+  <meta http-equiv="refresh" content="0; url=/" />
+  <title>Moved to DCF Exam Prep</title>
+  <script>window.location.replace('/');</script>
+</head><body>
+  <p>This page has moved. Redirecting to the DCF Exam Prep dashboard… <a href="/">Continue</a></p>
+</body></html>
