Add legacy URL redirects to DCF app and cache-busting guidance

--- a/jacksonville.html
+++ b/jacksonville.html
@@ -1,194 +1,1 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Family Fun Finder - Jacksonville</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <header class="site-header">
-      <div class="container header-content">
-        <div class="brand">
-          <span class="brand-mark" aria-hidden="true">★</span>
-          <div>
-            <p class="brand-title">Family Fun Finder</p>
-            <p class="brand-subtitle">Jacksonville</p>
-          </div>
-        </div>
-        <nav class="nav-links" aria-label="Primary">
-          <a href="#events">Events</a>
-          <a href="#categories">Categories</a>
-          <a href="#guides">Guides</a>
-          <a href="#newsletter">Newsletter</a>
-          <a class="cta-link" href="index.html">St. Augustine →</a>
-        </nav>
-      </div>
-    </header>
-
-    <main>
-      <section class="hero">
-        <div class="container hero-content">
-          <div>
-            <p class="tag">Bright ideas for busy families</p>
-            <h1>Find your next family adventure in Jacksonville.</h1>
-            <p class="hero-copy">
-              Curated events, play spots, and seasonal favorites — all in one calming place.
-            </p>
-            <div class="hero-actions">
-              <label class="search" aria-label="Search events">
-                <span>Search</span>
-                <input id="event-search" type="search" placeholder="Try: zoo, crafts, splash" />
-              </label>
-              <button class="primary-button" type="button">Browse this week</button>
-            </div>
-          </div>
-          <div class="hero-card" role="presentation">
-            <h2>This Week's Spotlight</h2>
-            <p class="hero-card-title">Riverwalk Family Night</p>
-            <p class="hero-card-meta">Friday • 6:00 PM • Downtown Riverwalk</p>
-            <p class="hero-card-body">
-              Food trucks, kids activities, and sunset views along the river.
-            </p>
-            <button class="secondary-button" type="button">View details</button>
-          </div>
-        </div>
-      </section>
-
-      <section class="quick-links" id="guides">
-        <div class="container">
-          <h2>Quick Guides</h2>
-          <div class="quick-grid">
-            <article>
-              <h3>Weekend Picks</h3>
-              <p>Top 5 things to do with kids this weekend.</p>
-            </article>
-            <article>
-              <h3>Playgrounds Map</h3>
-              <p>Favorite parks and splash pads around town.</p>
-            </article>
-            <article>
-              <h3>Free Museum Days</h3>
-              <p>Plan ahead for free or discounted admission.</p>
-            </article>
-          </div>
-        </div>
-      </section>
-
-      <section class="categories" id="categories">
-        <div class="container">
-          <div class="section-heading">
-            <h2>Browse by Category</h2>
-            <p>Find events by interest and energy level.</p>
-          </div>
-          <div class="card-grid">
-            <article class="category-card">Zoo & Animals</article>
-            <article class="category-card">Outdoor Adventures</article>
-            <article class="category-card">Music & Dance</article>
-            <article class="category-card">Sports & Active</article>
-            <article class="category-card">Arts & STEM</article>
-            <article class="category-card">Seasonal Festivals</article>
-          </div>
-        </div>
-      </section>
-
-      <section class="events" id="events">
-        <div class="container">
-          <div class="section-heading">
-            <h2>Upcoming Events</h2>
-            <p>Hand-picked happenings for Jacksonville families.</p>
-          </div>
-          <div class="event-grid" id="event-grid">
-            <article class="event-card" data-tags="outdoor zoo">
-              <div>
-                <p class="event-date">Sat • Mar 9</p>
-                <h3>Zoo Keeper for a Day</h3>
-                <p class="event-meta">9:30 AM • Jacksonville Zoo</p>
-                <p>Behind-the-scenes animal time with hands-on activities.</p>
-              </div>
-              <span class="pill">Reservation</span>
-            </article>
-            <article class="event-card" data-tags="arts crafts">
-              <div>
-                <p class="event-date">Sun • Mar 10</p>
-                <h3>Kids Art in the Park</h3>
-                <p class="event-meta">11:00 AM • Riverside Park</p>
-                <p>Local artists teach simple crafts with take-home kits.</p>
-              </div>
-              <span class="pill">Outdoor</span>
-            </article>
-            <article class="event-card" data-tags="festival music">
-              <div>
-                <p class="event-date">Thu • Mar 14</p>
-                <h3>Family Jazz on the Lawn</h3>
-                <p class="event-meta">5:30 PM • Treaty Oak Park</p>
-                <p>Live jazz, lawn games, and picnic blankets encouraged.</p>
-              </div>
-              <span class="pill">Free</span>
-            </article>
-            <article class="event-card" data-tags="sports active">
-              <div>
-                <p class="event-date">Sat • Mar 16</p>
-                <h3>Downtown Kids Fun Run</h3>
-                <p class="event-meta">8:00 AM • Sports Complex</p>
-                <p>Short distance run with medals, snacks, and music.</p>
-              </div>
-              <span class="pill">Bring water</span>
-            </article>
-          </div>
-        </div>
-      </section>
-
-      <section class="ads">
-        <div class="container">
-          <div class="section-heading">
-            <h2>Community Partners</h2>
-            <p>Share local services and family-focused businesses here.</p>
-          </div>
-          <div class="ad-grid">
-            <article class="ad-card">
-              <h3>Ad Spot #1</h3>
-              <p>Highlight a camp, school, or enrichment program.</p>
-            </article>
-            <article class="ad-card">
-              <h3>Ad Spot #2</h3>
-              <p>Promote a weekend offer or family workshop.</p>
-            </article>
-            <article class="ad-card">
-              <h3>Ad Spot #3</h3>
-              <p>Share a sponsored guide or membership deal.</p>
-            </article>
-          </div>
-        </div>
-      </section>
-
-      <section class="newsletter" id="newsletter">
-        <div class="container newsletter-card">
-          <div>
-            <h2>Get the Friday Family Fun List</h2>
-            <p>One email a week with the top picks for Jacksonville families.</p>
-          </div>
-          <form class="newsletter-form">
-            <input type="email" placeholder="you@email.com" aria-label="Email" />
-            <button class="primary-button" type="submit">Join free</button>
-          </form>
-        </div>
-      </section>
-    </main>
-
-    <footer class="site-footer">
-      <div class="container footer-content">
-        <div>
-          <p class="brand-title">Family Fun Finder</p>
-          <p class="brand-subtitle">Jacksonville</p>
-        </div>
-        <div>
-          <p>Questions or submissions?</p>
-          <a href="mailto:hello@familyfunfinder.com">hello@familyfunfinder.com</a>
-        </div>
-      </div>
-    </footer>
-
-    <script src="script.js"></script>
-  </body>
-</html>
+<!doctype html><html><head><meta charset="utf-8"><meta http-equiv="refresh" content="0;url=/"><title>Moved</title></head><body>Moved to DCF Exam Prep. <a href="/">Open app</a>.</body></html>
